# ponos

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  BUILD.bazel  CMakeDependencies.txt  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE  README.md  WORKSPACE  aergia.App.html  aergia.Buffer.html  aergia.BufferDescriptor.Attribute.html  aergia.BufferDescriptor.html  aergia.Camera.html  aergia.Camera2D.html  aergia.CameraModel.html  aergia.CartesianGrid.html  aergia.GraphicsDisplay.html  aergia.Mesh.html  aergia.PanMode.html  aergia.RawMesh.IndexData.html  aergia.RawMesh.html  aergia.RotateMode.html  aergia.Scene.html  aergia.SceneApp.html  aergia.SceneMesh.html  aergia.SceneObject.html  aergia.Shader.VertexAttribute.html  aergia.Shader.html  aergia.ShaderManager.html  aergia.TrackMode.html  aergia.Trackball.html  aergia.TrackballInterface.html  aergia.TriangleMesh.html  aergia.UserInput.html  aergia.ViewportDisplay.html  aergia.WireframeMesh.html  (+119 more)
aergia/: BUILD.bazel  CMakeLists.txt  README.md
aergia/aergia/: aergia.cpp  aergia.h
aergia/aergia/colors/: color.h  color_palette.h
aergia/aergia/graphics/: compute_shader.cpp  compute_shader.h  post_effect.cpp  post_effect.h  shader.cpp  shader.h  shader_manager.cpp  shader_manager.h
aergia/aergia/helpers/: bvh_model.h  camera_model.h  cartesian_grid.cpp  cartesian_grid.h  geometry_drawers.cpp  geometry_drawers.h  grid_model.h  hemesh_model.h  quad_tree_model.h  scene_handle.h  tmesh_model.h  vector_grid.h
aergia/aergia/io/: buffer.cpp  buffer.h  display_renderer.cpp  display_renderer.h  font_texture.cpp  font_texture.h  framebuffer.cpp  framebuffer.h  utils.h  (+21 more)
aergia/examples/: BUILD  CMakeLists.txt  advect.cpp  c_regular_grid.cpp  compute_shader.cpp  geometry_queries.cpp  hello3D.cpp  hello_aergia.cpp  hello_app.cpp  hello_vulkan.cpp  hemesh.cpp  instances.cpp  nanogui_example.cpp  openvdbexample.cpp  post_effects_example.cpp  procedural_texture.cpp  quad_tree.cpp  save_viewport_example.cpp  scene_app.cpp  scene_mesh_example.cpp  stream_lines.cpp  text_example.cpp  tmesh.cpp  vector_grid_example.cpp  viewports_example.cpp  zgrid_example.cpp
aergia/src/: aergia.cpp  aergia.h
circe/: BUILD.bazel  CMakeLists.txt
circe/circe/: circe.cpp  circe.h  io.cpp  io.h
circe/examples/: BUILD  CMakeLists.txt  bvh_example.cpp  compute_shader.cpp  geometry_queries.cpp  hello_circe.cpp  hemesh.cpp  instances.cpp  nanogui_example.cpp  post_effects_example.cpp  procedural_texture.cpp  save_viewport_example.cpp  scene_app.cpp  scene_mesh_example.cpp  stream_lines.cpp  text_example.cpp  vector_grid_example.cpp  viewports_example.cpp  volume_box2_example.cpp  volume_box_example.cpp
ext/glad/: BUILD  CMakeLists.txt
ext/imgui/: CMakeLists.txt
helios/: CMakeLists.txt  README.md
helios/helios/: helios.h
helios/src/: helios.h
hercules/: CMakeLists.txt
hercules/src/: body.hpp  fixture.hpp  hercules.h  rigid_body.h  shape.hpp  world.hpp  world_interface.h
hercules/testbed/: CMakeLists.txt  aabb_sweep_demo.h  contact_demo.h  demo.h  gjk_demo.h  gjk_transform_demo.h  main.cpp
hercules/tests/: CMakeLists.txt  TestAABBGrid.cpp  TestAABBSweep.cpp  main.cpp
hermes/: CMakeLists.txt
hermes/hermes/: hermes.h
hermes/tests/: CMakeLists.txt  algorithms.cu  blas.cu  blas_tests.cu  common_tests.cu  field.cu  grids.cu  main.cpp  main.cu  memory.cu  memory_tests.cu  numeric.cu  numeric_tests.cu  texture.cu  transform.cu  utils.cu
hermes/tests_old/: CMakeLists.txt  array.cu  field.cu  memory.cu  numeric.cu  texture.cu  utils.h
odysseus/: CMakeLists.txt
odysseus/examples/: CMakeLists.txt
odysseus/src/: clock.hpp  component_interface.h  component_manager.h  game.hpp  game_object.hpp  graphics_component.hpp  graphics_manager.cpp  graphics_manager.h  input_component.hpp  odysseus.h  physics_component.hpp  physics_manager.h
ponos/: BUILD  CMakeLists.txt
ponos/examples/: CMakeLists.txt  elliptic.cpp  prova.cpp
ponos/ponos/: ponos.h
ponos/src/: ponos.h
ponos/tests/: BUILD  CMakeLists.txt  TestBBox.cpp  TestBRep.cpp  TestBlas.cpp  TestFDM.cpp  TestGrid.cpp  TestMatrix.cpp  TestObjectPool.cpp  TestParallel.cpp  TestQuaternion.cpp  TestQueries.cpp  TestSearch.cpp  TestSort.cpp  TestTransform.cpp  TestZGrid.cpp  bbox_tests.cpp  blas_tests.cpp  bvh_tests.cpp  c_regular_grid_tests.cpp  common.cpp  common_tests.cpp  geometry_tests.cpp  log_tests.cpp  main.cpp  numeric_tests.cpp  octree_tests.cpp  parallel_tests.cpp  random_tests.cpp  rbf_tests.cpp  sparse_blas_tests.cpp  sparse_vector_tests.cpp  stag_grid_tests.cpp  storage_tests.cpp  structures_tests.cpp  tetrahedron_mesh.cpp  triangulate.cpp  z_point_set_tests.cpp
ponos/tests_old/: CMakeLists.txt  c_regular_grid_tests.cpp  direct_solvers.cpp  main.cpp  numeric_tests.cpp  parallel_tests.cpp  sparse_solvers_tests.cpp  stag_grid_tests.cpp  storage_tests.cpp  z_point_set_tests.cpp
poseidon/: CMakeLists.txt
poseidon/cuda/: CMakeLists.txt
poseidon/examples/: CMakeLists.txt  flip_drawer.h  hello_flip.cpp  hello_grid_solver.cpp  particle_advection_example.cpp  particle_system_model.cpp  zgrid.cpp
poseidon/poseidon/: poseidon.h
poseidon/src/: poseidon.h
poseidon/tests/: CMakeLists.txt  TestFLIP.cpp  TestFLIP2D.cpp  TestSweep.cpp  TestVDBGrid.cpp  TestVDBMacGrid.cpp  TestVDBParticleGrid.cpp  TestZParticleGrid.cpp  advection.cpp  flip_test.cpp  gather.cpp  pressure.cpp  scatter.cpp  solver.cpp  solver.h
projects/aergia/: CMakeLists.txt
src/: CMakeLists.txt  ponos.h
src/core/: differential_geometry.cpp  differential_geometry.h  shape.cpp  shape.h
src/geometry/: bbox.cpp  bbox.h  interval.h  line.h  matrix.cpp  matrix.h  normal.cpp  normal.h  plane.h  point.cpp  point.h  quaternion.cpp  quaternion.h  ray.cpp  ray.h  transform.cpp  transform.h  utils.h  vector.cpp  vector.h
src/log/: debug.h
src/shapes/: sphere.cpp  sphere.h
src/structures/: c_grid_interface.h  c_object_pool.hpp  regular_grid.h  z_grid.h
tests/: CMakeLists.txt  TestBBox.cpp  TestMatrix.cpp  TestTransform.cpp  bbox_test.cpp  grid_test.cpp  main.cpp  point_test.cpp  ray_test.cpp  vector_test.cpp
(+1094 files in other folders)
