config_setting(
    name = "linux",
    values = { "cpu": "k8" },
)
config_setting(
    name = "osx",
    values = { "cpu": "darwin" },
)

config_setting(
    name = "windows",
    values = {"cpu": "x64_windows"}
)

COMMONDEPS = [
    "//ponos", 
    "//ext/glad:glad", 
    "//ext/stb:stb_truetype", 
    "//ext/ply",
    "//ext/tinyobj"]

cc_library(
    name = "circe",
    srcs = glob(["circe/**/*.cpp"], exclude=["circe/io/vulkan*"]),
    hdrs = glob(["circe/**/*.h", "circe/*.h"], exclude=["circe/io/vulkan*"]),
    includes = ["."],
    deps = select({
        ":windows" : COMMONDEPS + ["@glfw//:glfw"],
        "//conditions:default" : COMMONDEPS + ["@glfwWin32//:glfw"]
    }),
    visibility = ["//visibility:public"],
)